Fixes for the views display menu add button overflow.

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -53,3 +53,12 @@ body.maintenance-page {
     margin-bottom: 0.5em;
   }
 }
+
+/* Admin page styles */
+ul#views-display-menu-tabs {
+  overflow: visible;
+
+  li.add ul.action-list li {
+    float: none;
+  }
+}
